Update of intro and setting up python

--- a/intro_to_python/python_syntax_and_plotting.ipynb
+++ b/intro_to_python/python_syntax_and_plotting.ipynb
@@ -20,19 +20,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\">\n",
-    "Components to add to tutorial:\n",
-    "<br />\n",
-    "1. shape, size, and type of data <br/>\n",
-    "2. How to access python documentation. Should show a screenshot here. \n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "--- "
    ]
   },
@@ -493,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -529,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -563,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -588,6 +575,215 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##  Checking type, length, and shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's useful to be able to see the properties of variables that we've created so far. We can check the type of our variables as follows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'float'>\n",
+      "<class 'bool'>\n",
+      "<class 'int'>\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate some variable with different types.\n",
+    "string_type = 'string'\n",
+    "float_type = 3.14159\n",
+    "bool_type = True\n",
+    "int_type = 3\n",
+    "list_type = ['a', 'b', 2]\n",
+    "tuple_type = ('c', 'd', 3)\n",
+    "nparray_type = np.ones_like(tuple_type)\n",
+    "\n",
+    "# Print their types\n",
+    "print(type(string_type))\n",
+    "print(type(float_type))\n",
+    "print(type(bool_type))\n",
+    "print(type(int_type))\n",
+    "print(type(list_type))\n",
+    "print(type(tuple_type))\n",
+    "print(type(nparray_type))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that even though the elements of our `list_type` and `tuple_type` have mixed types, this command tells us what the type of the *object* is (i.e. `list` and `tuple`). We can force changes in the type of a variable with ease. Let's make that `int` a `float` and that `tuple` a `list`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "['c', 'd', 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Change the type of a varible\n",
+    "int_to_float = float(int_type)\n",
+    "tuple_to_list = list(tuple_type)\n",
+    "print(int_to_float)\n",
+    "print(tuple_to_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can  also convert numbers to strings. This is useful if we want to print a sentence including the output from some other operation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of value_one and value_two is 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert a float to a string.\n",
+    "value_one = 10\n",
+    "value_two = 20\n",
+    "print(\"The product of value_one and value_two is \" + str(value_one * value_two))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to type, we can get some information about the shape and length of all of our variables. We can do this using the `len` function and the `np.shape` function that comes with NumPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the length, size, and shape of our variables.\n",
+    "big_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(len(big_array))\n",
+    "print(np.shape(big_array))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We've created *a lot* of variable so far in this tutorial. It's nice to be able to look at what variables exist in our environment as well as get some information. Let's take a look at everything we've made so far. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable                Type       Data/Info\n",
+      "--------------------------------------------\n",
+      "a                       int        1\n",
+      "aranged                 ndarray    25: 25 elems, type `int64`, 200 bytes\n",
+      "b                       int        2\n",
+      "big_array               ndarray    2x3: 6 elems, type `int64`, 48 bytes\n",
+      "bool_type               bool       True\n",
+      "c                       float      -3.0\n",
+      "example_list            list       n=3\n",
+      "example_tuple           tuple      n=3\n",
+      "float_type              float      3.14159\n",
+      "int_to_float            float      3.0\n",
+      "int_type                int        3\n",
+      "linear_spaced           ndarray    1000: 1000 elems, type `float64`, 8000 bytes\n",
+      "list_of_lists           list       n=1\n",
+      "list_type               list       n=3\n",
+      "log_spaced              ndarray    200: 200 elems, type `float64`, 1600 bytes\n",
+      "mixed_type_list         list       n=5\n",
+      "my_array                ndarray    3: 3 elems, type `int64`, 24 bytes\n",
+      "next_list               list       n=3\n",
+      "np                      module     <module 'numpy' from '/Us<...>kages/numpy/__init__.py'>\n",
+      "nparray_type            ndarray    3: 3 elems, type `<U1`, 12 bytes\n",
+      "one_dimensional_array   ndarray    4: 4 elems, type `int64`, 32 bytes\n",
+      "string_type             str        string\n",
+      "tupe_type               list       n=3\n",
+      "tuple_of_lists          tuple      n=3\n",
+      "tuple_to_list           list       n=3\n",
+      "tuple_type              tuple      n=3\n",
+      "two_dimensional_array   ndarray    2x4: 8 elems, type `int64`, 64 bytes\n",
+      "value_one               int        10\n",
+      "value_two               int        20\n"
+     ]
+    }
+   ],
+   "source": [
+    "whos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that we get a relatively nicely ordered list of all of our variables, the type of the variable, and then information about their contents. We can see for our lists and arrays it tells us the number of rows and columns, how many elements there are, what the type of those elements are and so forth. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##  Functions"
    ]
   },
@@ -595,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions are arguable the most important components of efficient and effective programming. Functions are sections of code that are written to take an argument, perform some manipulation, and return the manipulated argument. In Python, these functions can be written in the same script where you want to use them.\n",
+    "Functions are arguably the most important components of efficient and effective programming. Functions are sections of code that are written to take an argument, perform some manipulation, and return the manipulated argument. In Python, these functions can be written in the same script where you want to use them.\n",
     "\n",
     "In Python, spacing and indentation matters (this is why we set our Tab settings in the Atom text editor). When we define a function and perform looping, we have to be very aware of where our code exists in the script. Once you define a function, all operations that are to take place in that function should be indented from the rest of the code.  \n",
     "\n",
@@ -774,7 +970,7 @@
     "* `number_of_divisions = 10`: We assigned a value for the total number of divisions to a variable.\n",
     "* `N_d = [number_of_cells]` We made a list where the first entry (our starting point) only has one cell.\n",
     "\n",
-    "Now we enter the for loop, which exectues our 'simulation'.\n",
+    "Now we enter the for loop, which exectues our simulation.\n",
     "\n",
     "* `for i in range(number_of_divisions):` This starts the for loop. We are using the variable `i` as an iterator. Each time we go through the loop, `i` will take on the next value of the `range` function. The `range` function generates a list of integers starting from `0` to `number_of_divisions` which we set as 10.\n",
     "* `number_of_cells = number_of_cells * 2`: This performed the cell division, doubling the number of cells. We also reassigned the value of this variable. Through the next iteration of the loop, the number will double again.\n",
@@ -989,7 +1185,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Much better!"
+    "That's much better! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Asking for help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While we have covered a lot of Python syntax, I don't expect you will have all of it memorized! Every module (nearly) that you will use has a well constructed **documentation** that explains how functions should be used. Some great examples of this are the documentation pages for [NumPy and SciPy](https://docs.scipy.org/doc/numpy/), [seaborn](), and [scikit-image]().\n",
+    "\n",
+    "\n",
+    "When you are typing away in the IPython interpreter, you can pull up the documentation information for any function or attribute by typing the name followed by a question mark (`?`). For example (assuming you have `numpy` imported as `np`, you can get the documentation for the `np.random` module by typing the following.\n",
+    "\n",
+    "```\n",
+    "In [1]: np.random?\n",
+    "```"
    ]
   },
   {
